--- a/public/sass/_responsive.scss
+++ b/public/sass/_responsive.scss
@@ -535,6 +535,12 @@ margin-bottom: 30px;
   top: 0 !important;
 }
 
+#startenals .elementor-tabs-view-horizontal .elementor-tab-desktop-title, #kennismaken  .elementor-tabs-view-horizontal .elementor-tab-desktop-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 }
 
     
